css/app.css
*, body {
	text-align: center;
}

html {
	font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
}

/* HEADER SECTION */

h1 {
	color: #696972;
	font-size: 28pt;
}

/* START OF BODY */

h3 {
	font-size: 18pt;
}

.callout p {
	text-indent: 30px;
}

input {
	letter-spacing: .4px;
	cursor: pointer;
	outline: none;
	border: none;
	margin-left: 3px;
	background-color: #DCDCDC;
}

input:active {
  	box-shadow: 0 .75px #808080;
  	transform: translateY(1px);
}

/* RESPONSIVE */

@media only screen and (max-width: 330px) {
	span {
		font-size: 12pt;
	}
}

